--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -163,12 +163,21 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = "gaussian";
-# blur-stregth = 500
-# blur-size = 10 
-# Blur-deviation = 5.0
 
-#
+blur: {
+  method = "kawase";
+  #method = "dual_kawase";
+
+  strength = 10;
+  size = 10;
+  deviation = 5;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+}
+
+
+blur-deviation = true
 # blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
@@ -187,16 +196,16 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-blur-background-fixed = true 
-# blur-background-fixed = false 
+#blur-background-fixed = true 
+#blur-background-fixed = false 
 
 
 # Specify the blur convolution kernel, with the following format:
 # example:
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
-# blur-kern = ''
-blur-kern = "3x3box";
+ blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
