--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -167,18 +167,17 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 blur: {
   method = "kawase";
   #method = "dual_kawase";
-
-  strength = 10;
-  size = 10;
-  deviation = 5;
+  strength = 12;
+  #size = 7;
+  #deviation = 5.0;
   background = false;
   background-frame = false;
   background-fixed = false;
 }
 
 
-blur-deviation = true
-# blur-deviation = false
+#blur-deviation = true
+ #blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
@@ -192,7 +191,7 @@ blur-deviation = true
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+ blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -226,8 +225,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx";
-backend = "xrender";
+ backend = "glx";
+#backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -261,8 +260,8 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will 
 # try detecting this with X RandR extension.
 #
-# refresh-rate = 60
-refresh-rate = 0
+ refresh-rate = 60
+#(this was the default)refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -314,7 +313,7 @@ detect-client-leader = true
 # with a 5x5 one you use `--resize-damage 2`, and so on). 
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
 #
-# resize-damage = 1
+ resize-damage = 2500
 
 # Specify a list of conditions of windows that should be painted with inverted color. 
 # Resource-hogging, and is not well tested.
@@ -327,13 +326,15 @@ detect-client-leader = true
 # My tests show a 15% performance boost. Recommended.
 #
 # glx-no-stencil = false
+ glx-no-stencil = true
+
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
 # Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+ glx-no-rebind-pixmap = false
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
