--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,22 +11,22 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 13; 
-#shadow-radius = 7;
+shadow-radius = 12; 
+#shadow-radius = 5;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
-shadow-opacity = 0.95 
+shadow-opacity = 1.0 
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-# shadow-offset-x = -12
- shadow-offset-x = -9;
+# shadow-offset-x = -5
+# shadow-offset-x = -5
+ shadow-offset-x = -12;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
 #shadow-offset-y = -12
-shadow-offset-y = -5;
+shadow-offset-y = -12;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -121,7 +121,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.93;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -165,18 +165,18 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Parameters for background blurring, see the *BLUR* section for more information.
 
 blur: {
-  method = "kawase";
-  #method = "dual_kawase";
-  strength = 12;
-  #size = 7;
-  #deviation = 5.0;
+ # method = "kawase";
+  method = "dual_kawase";
+  strength = 20;
+  size = 5;
+  deviation = 5.0;
   background = false;
   background-frame = false;
   background-fixed = false;
 }
 
 
-#blur-deviation = true
+blur-deviation = true
  #blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
@@ -226,7 +226,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
  backend = "glx";
-#backend = "xrender";
+# backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
