--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -165,19 +165,19 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Parameters for background blurring, see the *BLUR* section for more information.
 
 blur: {
- # method = "kawase";
+  #method = "kawase";
   method = "dual_kawase";
-  strength = 20;
-  size = 5;
-  deviation = 5.0;
+  blur-strength = 20;
+  #size = 7;
+  #deviation = 1.0;
   background = false;
   background-frame = false;
   background-fixed = false;
 }
 
 
-blur-deviation = true
- #blur-deviation = false
+ #blur-deviation = true
+ blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
@@ -196,7 +196,7 @@ blur-deviation = true
 
 # Use fixed blur strength rather than adjusting according to window opacity.
 #blur-background-fixed = true 
-#blur-background-fixed = false 
+blur-background-fixed = false 
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -204,7 +204,7 @@ blur-deviation = true
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
  blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#blur-kern = "3x3box";
+#blur-kern = "5x5box";
 
 
 # Exclude conditions for background blur.
@@ -230,10 +230,10 @@ blur-background-exclude = [
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-# dbus = false
+ dbus = false
 
 # Try to detect WM windows (a non-override-redirect window with no 
 # child that has 'WM_STATE') and mark them as active.
@@ -260,7 +260,7 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will 
 # try detecting this with X RandR extension.
 #
- refresh-rate = 60
+ refresh-rate = 60;
 #(this was the default)refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
@@ -281,26 +281,26 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+ unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
-# unredir-if-possible-delay = 0
+ unredir-if-possible-delay = 0
 
 # Conditions of windows that shouldn't be considered full-screen for unredirecting screen.
-# unredir-if-possible-exclude = []
+ unredir-if-possible-exclude = []
 
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels. 
 # A positive value enlarges it while a negative one shrinks it. 
@@ -313,12 +313,12 @@ detect-client-leader = true
 # with a 5x5 one you use `--resize-damage 2`, and so on). 
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
 #
- resize-damage = 2500
+ resize-damage = 1;
 
 # Specify a list of conditions of windows that should be painted with inverted color. 
 # Resource-hogging, and is not well tested.
 #
-# invert-color-include = []
+ invert-color-include = []
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
 # Might cause incorrect opacity when rendering transparent content (but never 
@@ -326,7 +326,7 @@ detect-client-leader = true
 # My tests show a 15% performance boost. Recommended.
 #
 # glx-no-stencil = false
- glx-no-stencil = true
+ glx-no-stencil = true;
 
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
@@ -334,7 +334,7 @@ detect-client-leader = true
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
- glx-no-rebind-pixmap = false
+ glx-no-rebind-pixmap = false;
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -342,13 +342,13 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = false;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+ xrender-sync-fence = false;
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents. 
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
@@ -359,24 +359,24 @@ use-damage = true
 # Force all windows to be painted with blending. Useful if you 
 # have a glx-fshader-win that could turn opaque pixels transparent.
 #
-# force-win-blend = false
+ force-win-blend = false;
 
 # Do not use EWMH to detect fullscreen windows. 
 # Reverts to checking if a window is fullscreen based only on its size and coordinates.
 #
-# no-ewmh-fullscreen = false
+ no-ewmh-fullscreen = false;
 
 # Dimming bright windows so their brightness doesn't exceed this set value. 
 # Brightness of a window is estimated by averaging all pixels in the window, 
 # so this could comes with a performance hit. 
 # Setting this to 1.0 disables this behaviour. Requires --use-damage to be disabled. (default: 1.0)
 #
-# max-brightness = 1.0
+ max-brightness = 1.0;
 
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
 #
-# transparent-clipping = false
+ transparent-clipping = false;
 
 # Set the log level. Possible values are:
 #  "trace", "debug", "info", "warn", "error"
