--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -18,7 +18,7 @@ order += "volume master"
 order += "battery all"
 
 tztime local {
-        format = "%a %d %h,%u:%M:%P													"
+        format = "%a %d %h, %l:%M:%P													"
 }
 
 
