--- a/.config/i3/config
+++ b/.config/i3/config
@@ -76,6 +76,19 @@ font pango:FontAwesome 9.5
 #####################                      ###########################
 ######################################################################
 
+#Set mouse for left handed
+exec --no-startup-id xmodmap /home/carlos/.mouseconfig
+
+#Swap Caps Lock with Esc.
+exec --no-startup-id xmodmap /home/carlos/.speedswapper
+
+#Set latam keyboard
+exec --no-startup-id setxkbmap latam
+
+#Set screen brightness to 5% on start up
+exec --no-startup-id xbacklight -set 5
+
+#
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
@@ -93,9 +106,6 @@ exec_always feh --bg-fill --randomize /home/carlos/Imágenes/Wallpapers/
 
 #Autstart picom using my custom configuration file.
 exec_always picom --config /home/carlos/.config/picom/picom.conf
-
-#Swap Caps Lock with Esc.
-exec --no-startup-id xmodmap /home/carlos/.speedswapper
 
 #Control brighness with function keys.
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10
