--- a/.config/i3/config
+++ b/.config/i3/config
@@ -113,8 +113,10 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
 bar {
-        status_command i3status 
+	separator_symbol " "
+	status_command i3status 
 #	status_command i3blocks
 	position top
 	tray_output primary 
@@ -123,12 +125,11 @@ bar {
         background #10101099
         statusline #ffffff
         separator #666666
-
         focused_workspace  #5294e2 #5294e2 #ffffff
         active_workspace   #333333 #5f676a #ffffff
         inactive_workspace #333333 #222222 #888888
-        urgent_workspace   #2f343a #900000 #ffffff
-        binding_mode       #2f343a #900000 #ffffff
+        urgent_workspace   #fb4934 #fb4934 #ffffff
+        binding_mode       #8ec07c #8ec07c #ffffff
     }
 }
 ######################################################################
@@ -160,7 +161,7 @@ for_window [class="Xfce4-appfinder"] floating enable
 #bindsym $mod+d exec xfce4-appfinder
 
 #Launch rofi.
-bindsym $mod+d exec rofi -show drun -show-icons 
+bindsym $mod+d exec rofi -show drun -show-icons -fake-transparency 
 
 #Use rofi as a window swithci
 bindsym $mod+Tab exec rofi -show window
