--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,57 +1,51 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
-
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
+# _ _____   ____  _        _               ____             
+#(_)___ /  / ___|| |_ __ _| |_ _   _ ___  | __ )  __ _ _ __ 
+#| | |_ \  \___ \| __/ _` | __| | | / __| |  _ \ / _` | '__|
+#| |___) |  ___) | || (_| | |_| |_| \__ \ | |_) | (_| | | _ 
+#|_|____/  |____/ \__\__,_|\__|\__,_|___/ |____/ \__,_|_|(_)
 
 general {
     	output_format = "i3bar"
     	separator = " "
-        colors = false 
+        colors = true 
         interval = 5
 }
 
 order += "tztime local"
 order += "wireless _first_"
-order += "memory"
 order += "volume master"
 order += "battery all"
 
 tztime local {
-        format = "%a %d %h, %l:%M:%P															"
+        format = "%a %d %h, %l:%M:%P																		"
 }
 
 
 wireless _first_ {
         format_up = "  "
-        format_down = ""
+        format_down = "  "
+	color_good = "#FFFFFF"
 }
-
-memory {
-        format = "%used "
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
-}
-
 
 volume master {
-        format = " %volume  "
+        format = "  %volume "
         format_muted = " muted (%volume)"
         device = "pulse"
         mixer = "Master"
         mixer_idx = 0
+	color_bad = "#FF0000"
 }
 
 battery all {
         format = "%status %percentage  "
 	format_down = "No battery"
-        status_chr = " CHR"
-        status_bat = " BAT"
-        status_unk = "? UNK"
-        status_full = " FULL"
+        status_chr = " "
+        status_bat = " "
+        status_unk = "? "
+        status_full = " "
 	low_threshold = 10
+	color_bad = "#fb4934"
+	threshold_type = percentage
 	last_full_capacity = true
 }
 
